Fold the header and footer parts of index & azuresearch into helpers + fix some bugs in the process

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -760,6 +760,7 @@
     <Content Include="Content\bootstrap\alerts.less" />
     <Content Include="App_Code\EchoHelper.cshtml" />
     <Content Include="Content\DavidGray-Resume.pdf" />
+    <Content Include="App_Code\SongHelper.cshtml" />
     <None Include="Properties\PublishProfiles\m4d.pubxml" />
     <Content Include="MvcDiagnostics.aspx" />
     <Content Include="pinterest-885c1.html" />
