Fix build for Identity packages

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -295,6 +295,7 @@ Sample binding in application.config for iisexpress
     <trace>
       <listeners>
         <add name="WebPageTraceListener" type="System.Web.WebPageTraceListener,              System.Web,              Version=4.0.0.0,              Culture=neutral,             PublicKeyToken=b03f5f7f11d50a3a" />
+        <add name="myAppInsightsListener" type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener" />
       </listeners>
     </trace>
     <switches>
