--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -20,15 +20,17 @@
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.JavaScript" version="0.22.9-build00167" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.PerformanceCollector" version="0.14.0-build20632" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.0.0" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
