--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1010,6 +1010,7 @@
     <Content Include="Views\Shared\_filtermodal.cshtml" />
     <Content Include="Views\Shared\_dancemodal.cshtml" />
     <Content Include="Views\Song\Artist.cshtml" />
+    <Content Include="Views\Song\RawSearchForm.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
