Putting a pin in raw search for now.  Need to figure out how mvc edit stuff works (again) so that the automatic binding happens + we should just plow into the search results page rather than having something specital happen.

--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1010,6 +1010,7 @@
     <Content Include="Views\Shared\_dancemodal.cshtml" />
     <Content Include="Views\Song\Artist.cshtml" />
     <Content Include="Views\Song\RawSearch.cshtml" />
+    <Content Include="Views\Song\AdvancedSearchForm.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
