--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1009,7 +1009,7 @@
     <Content Include="Views\Shared\_filtermodal.cshtml" />
     <Content Include="Views\Shared\_dancemodal.cshtml" />
     <Content Include="Views\Song\Artist.cshtml" />
-    <Content Include="Views\Song\RawSearch.cshtml" />
+    <Content Include="Views\Song\RawSearchForm.cshtml" />
     <Content Include="Views\Song\AdvancedSearchForm.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
