--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -102,6 +102,7 @@
     <Compile Include="DanceQuery.cs" />
     <Compile Include="DanceRatingDelta.cs" />
     <Compile Include="DanceRatingInfo.cs" />
+    <Compile Include="DanceStats.cs" />
     <Compile Include="DbTestSet.cs" />
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="EchoTrack.cs" />
