Added in DanceStatsManager in place of SongCounts and refactored DanceCategory so that the static parts of it are in DanceStatsManager as well...

--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -122,7 +122,7 @@
     <Compile Include="SearchResults.cs" />
     <Compile Include="SearchServiceInfo.cs" />
     <Compile Include="ServiceType.cs" />
-    <Compile Include="SongCounts.cs" />
+    <Compile Include="DanceStatsManager.cs" />
     <Compile Include="SongFilterConverter.cs" />
     <Compile Include="SongPropertyMerge.cs" />
     <Compile Include="SongSort.cs" />
