Got JSON serialization and better abstraction of Dancestats manager basically working - still needs a couple of tweaks on both

--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -157,6 +157,7 @@
     <Compile Include="TagSummary.cs" />
     <Compile Include="TagType.cs" />
     <Compile Include="TopN.cs" />
+    <Compile Include="ToStringJsonConverter.cs" />
     <Compile Include="TraceLevels.cs" />
     <Compile Include="TrackNumber.cs" />
     <Compile Include="UndoAction.cs" />
