--- a/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/m4dModels.Tests/m4dModels.Tests.csproj
@@ -115,6 +115,7 @@
     <Compile Include="SongTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongFilterTests.cs" />
+    <Compile Include="StatsTest.cs" />
     <Compile Include="TrackTests.cs" />
     <Compile Include="AlbumTrackTests.cs" />
     <Compile Include="TagTests.cs" />
@@ -140,6 +141,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <Content Include="TestData\dancestatistics.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestData\test-dances.txt">
