Get round-trip test of load/save dance stats working

--- a/m4d/ApplicationInsights.config
+++ b/m4d/ApplicationInsights.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
   <!-- This key is for Application Insights resource 'm4d' in resource group 'Default-Web-WestUS' -->
+  <!-- This key is for Application Insights resource 'm4d' in resource group 'Default-Web-WestUS' -->
   <InstrumentationKey>aada2f48-d93c-4778-a71f-7781952cc47b</InstrumentationKey>
   <TelemetryModules>
     <Add Type="Microsoft.ApplicationInsights.DependencyCollector.DependencyTrackingTelemetryModule, Microsoft.AI.DependencyCollector" />
