Refactored IndexUpdater into DanceMusicService and call call UpdateAndEnqueue whenever we're explicitly changing a single song.

--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -109,6 +109,7 @@
     <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="DanceLink.cs" />
     <Compile Include="BatchInfo.cs" />
+    <Compile Include="IndexUpdater.cs" />
     <Compile Include="LikeDictionarycs.cs" />
     <Compile Include="LocalMerger.cs" />
     <Compile Include="MergeCluster.cs" />
