Remove log dependency in undo user and improve the topsongs cache handling
Related Work Items: #622

--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -111,6 +111,7 @@
     <Compile Include="BatchInfo.cs" />
     <Compile Include="IndexUpdater.cs" />
     <Compile Include="LikeDictionarycs.cs" />
+    <Compile Include="LinqExtensions.cs" />
     <Compile Include="LocalMerger.cs" />
     <Compile Include="MergeCluster.cs" />
     <Compile Include="MusicServiceStub.cs" />
