--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -386,7 +386,6 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JsonNetResult.cs" />
-    <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="APIControllers\MusicServiceController.cs" />
     <Compile Include="APIControllers\PurchaseInfoController.cs" />
@@ -481,6 +480,10 @@
     <Compile Include="Migrations\201602042224182_EchoNest.cs" />
     <Compile Include="Migrations\201602042224182_EchoNest.Designer.cs">
       <DependentUpon>201602042224182_EchoNest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607062250031_RemoveLogs.cs" />
+    <Compile Include="Migrations\201607062250031_RemoveLogs.Designer.cs">
+      <DependentUpon>201607062250031_RemoveLogs.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
@@ -908,10 +911,6 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\SeedDatabase.cshtml" />
-    <Content Include="Views\Log\Index.cshtml" />
-    <Content Include="Views\Log\RestoreLines.cshtml" />
-    <Content Include="Views\Log\RestoreResults.cshtml" />
-    <Content Include="Views\Log\Undo.cshtml" />
     <Content Include="Views\SongProperty\Index.cshtml" />
     <Content Include="Views\Song\Create.cshtml" />
     <Content Include="Views\Song\Delete.cshtml" />
@@ -1095,6 +1094,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602042224182_EchoNest.resx">
       <DependentUpon>201602042224182_EchoNest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607062250031_RemoveLogs.resx">
+      <DependentUpon>201607062250031_RemoveLogs.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
