Remove user tags table + make progress on updating AZS

--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -488,6 +488,10 @@
     <Compile Include="Migrations\201607151825104_RemoveSongs.Designer.cs">
       <DependentUpon>201607151825104_RemoveSongs.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607182016274_RemoveUserTags.cs" />
+    <Compile Include="Migrations\201607182016274_RemoveUserTags.Designer.cs">
+      <DependentUpon>201607182016274_RemoveUserTags.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
     <Compile Include="Context\DanceMusicContext.cs" />
@@ -1102,6 +1106,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607151825104_RemoveSongs.resx">
       <DependentUpon>201607151825104_RemoveSongs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607182016274_RemoveUserTags.resx">
+      <DependentUpon>201607182016274_RemoveUserTags.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
