DBKill: Factor out tag manager from DanceStatsManager - this substantially improves the clarity of the chicken and egg problem with tags vs. songs being loaded first in dance stats and was necessary to get dynamic tag updating working for new tags created directly in azure.

--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -124,6 +124,7 @@
     <Compile Include="SearchServiceInfo.cs" />
     <Compile Include="ServiceType.cs" />
     <Compile Include="DanceStatsManager.cs" />
+    <Compile Include="SmartLock.cs" />
     <Compile Include="SongFilterConverter.cs" />
     <Compile Include="SongPropertyMerge.cs" />
     <Compile Include="SongSort.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="TagCount.cs" />
     <Compile Include="TaggableObject.cs" />
     <Compile Include="TagList.cs" />
+    <Compile Include="TagManager.cs" />
     <Compile Include="TagSummary.cs" />
     <Compile Include="TagType.cs" />
     <Compile Include="ToStringJsonConverter.cs" />
