--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -559,6 +559,7 @@
     <Content Include="Content\beat-asc.png" />
     <Content Include="Content\beat-desc.png" />
     <Content Include="Content\BlackBanner.png" />
+    <Content Include="Content\blogmap.txt" />
     <Content Include="Content\blue-help.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
