Broke link fixes for empty dances and sort order fails.

--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1218,6 +1218,7 @@
     <Content Include="Views\Song\Artist.cshtml" />
     <Content Include="Views\Song\RawSearchForm.cshtml" />
     <Content Include="Views\Song\AdvancedSearchForm.cshtml" />
+    <Content Include="Views\Dance\emptydance.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
