Fixed an obscure bug with merging Tested Rhett Catalog

--- a/m4d.Tests/m4d.Tests.csproj
+++ b/m4d.Tests/m4d.Tests.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Content Include="App.config" />
     <Content Include="MvcDiagnostics.aspx" />
+    <Content Include="Test Data\backup-index.txt" />
     <Content Include="Test Data\backup-snapshot.txt" />
     <Content Include="Test Data\music-list.TXT" />
     <Content Include="Test Data\tags-2014-10-16.txt" />
