--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -17,10 +17,10 @@ Sample binding in application.config for iisexpress
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="bundleTransformer">
-      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+      
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
-      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
-    </sectionGroup>
+      
+    <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /></sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-m4d-local.mdf;Initial Catalog=aspnet-m4d-local;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -171,7 +171,7 @@ Sample binding in application.config for iisexpress
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.92.0" newVersion="1.9.92.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.138.0" newVersion="1.9.138.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
@@ -179,7 +179,7 @@ Sample binding in application.config for iisexpress
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MsieJavaScriptEngine" publicKeyToken="a3a2846a37ac0d3e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.3.0" newVersion="1.5.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
@@ -363,7 +363,7 @@ Sample binding in application.config for iisexpress
         
       <minifiers>
 					
-				<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" /></minifiers><translators>
+				<add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" /><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers><translators>
 					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
 				<add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" /></translators><postProcessors>
 					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
@@ -375,7 +375,7 @@ Sample binding in application.config for iisexpress
 				
 				<minifiers>
 					
-				<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" /></minifiers>
+				<add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" /><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers>
 				
 			<translators>
 					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
